src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Reps</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CS_Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Confidence__c</fullName>
        <label>Confidence</label>
        <picklist>
            <picklistValues>
                <fullName>Definite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Duration_Months__c</fullName>
        <label>Duration(Months)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Guidewire_Staffing_Model__c</fullName>
        <label>Guidewire Staffing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Full-Time: GSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Staff Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-Time: Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner w/GW Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time: Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Led/No GW Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-Time: RCS</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Percent_Complete__c</fullName>
        <label>Percent Complete </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CS_Phase__c</fullName>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Prod</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Planned_Completion_Date__c</fullName>
        <label>Planned Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CS_Prior_Product_Version__c</fullName>
        <label>Prior Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Resources__c</fullName>
        <inlineHelpText>Number and type of developers needed on the project. For example:  2 Functional, 1 Technical</inlineHelpText>
        <label>Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_RightNow_ID__c</fullName>
        <externalId>true</externalId>
        <label>RightNow ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_Status_Date__c</fullName>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Status_Note__c</fullName>
        <label>Status Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Upgrade_Comments__c</fullName>
        <label>Upgrade Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CS_Upgrade_Deployement_Date__c</fullName>
        <label>Upgrade Deployment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CS_Upgrade_Product_Version__c</fullName>
        <label>Upgrade Product Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Upgrade_Project_Status__c</fullName>
        <label>Upgrade Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CS_Upgrade_Start_Date__c</fullName>
        <label>Upgrade Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference_Name__c</fullName>
        <label>Conference Name</label>
        <picklist>
            <picklistValues>
                <fullName>AASCIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACORD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Celent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNSEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICE - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Canada Technology Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAMIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Work Comp and Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI CIO Summit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCI IT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Source__c</fullName>
        <description>Track the primary source for how this event came to be.</description>
        <label>Meeting Source</label>
        <picklist>
            <picklistValues>
                <fullName>Outbound Calling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoming Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Hypothesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail - NOT Value Hypo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Confirmation_Contact__c</fullName>
        <description>The sales rep or manager who confirmed the meeting occurred correctly.</description>
        <inlineHelpText>The sales rep or manager who confirmed the meeting occurred correctly.</inlineHelpText>
        <label>Internal Confirmation Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MH_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration Trigger Do not remove</description>
        <label>MH Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Feedback__c</fullName>
        <description>Feedback from the call regarding marketing activity.</description>
        <inlineHelpText>Feedback from the call regarding marketing activity.</inlineHelpText>
        <label>Marketing Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Outcome_Rating__c</fullName>
        <inlineHelpText>Rates the Outcome of the Event that was setup</inlineHelpText>
        <label>Meeting Outcome Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Positive - Led to advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral - Correct person and no advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative - Wrong person, waste of time.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upcoming - Not yet occurred</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Source_Comment__c</fullName>
        <inlineHelpText>Please use this field to describe in detail the meeting source. For instance if the meeting came from a webinar, which webinar?</inlineHelpText>
        <label>Meeting Source Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outcome_Rating_Notes__c</fullName>
        <description>Describe why a meeting rating was given.</description>
        <inlineHelpText>Describe why a meeting rating was given.</inlineHelpText>
        <label>Outcome Rating Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Cat__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Guidewire Enterprise Software</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.Product__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Standard Products</value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>mh_Additional_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Additional Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Associated_Green_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Associated Green Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Attitude_Questions__c</fullName>
        <description>SAM Integration</description>
        <label>Attitude Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Basic_Issues__c</fullName>
        <description>SAM Integration</description>
        <label>Basic Issue Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Best_Action_Commitment__c</fullName>
        <description>SAM Integration</description>
        <label>Best Action Commitment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Commitment_Questions__c</fullName>
        <description>SAM Integration</description>
        <label>Commitment Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Completion_Date__c</fullName>
        <description>SAM Integration Best Action Completion Date</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Confirmation_Questions__c</fullName>
        <description>SAM Integration</description>
        <label>Confirmation Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Credibility__c</fullName>
        <description>SAM Integration</description>
        <label>Credibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Green_Sheet_Created_Date__c</fullName>
        <label>Green Sheet Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Last_Updated_Green_Sheet__c</fullName>
        <label>Last Updated Green Sheet</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Notes_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Managers Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Notes__c</fullName>
        <description>SAM Integration</description>
        <label>Managers Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Managers_Review_Date__c</fullName>
        <description>SAM Integration</description>
        <label>Managers Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mh_Minimum_Acceptable_Action__c</fullName>
        <description>SAM Integration</description>
        <label>Minimum Acceptable Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_New_Information_Questions__c</fullName>
        <description>SAM Integration</description>
        <label>New Information Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Possible_Basic_Issues__c</fullName>
        <description>SAM Integration</description>
        <label>Basic Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Post_Call_Assessment_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAM Integration</description>
        <label>Debrief Notes Exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mh_Sheet_Section__c</fullName>
        <description>SAM Sheet Section Information Gold Sheet and Blue Sheet Best Actions</description>
        <label>Sheet Section</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Unique_Strengths__c</fullName>
        <description>SAM Integration</description>
        <label>Giving Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mh_Valid_Business_Reason__c</fullName>
        <description>SAM Integration</description>
        <label>Valid Business Reason</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>All_Internal_Events</fullName>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>Region__c</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Audience__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>EVENT.LOCATION</columns>
        <columns>TASK.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event.Internal_Event</value>
        </filters>
        <label>All Internal Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Upcoming_Internal_Training_Events</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.TYPE</columns>
        <columns>Region__c</columns>
        <columns>EVENT.START_DATE_TIME</columns>
        <columns>EVENT.END_DATE_TIME</columns>
        <columns>EVENT.DURATION</columns>
        <columns>Audience__c</columns>
        <columns>TASK.STATUS</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Event.Internal_Event</value>
        </filters>
        <filters>
            <field>EVENT.START_DATE_TIME</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Internal Training Events</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>